Fix bugs with regard to using ArrayList